Update section ID in Highlights and adjust translation keys in Navbar and sv.json

--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1,6 +1,6 @@
 {
     "home": "Hem",
-    "about": "Om Mig",
+    "aboutMenu": "Om mig",
     "meritsMenu": "Meriter",
     "career": "Karriär",
     "gallery": {
