Fixed some buggs

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -72,7 +72,7 @@
     },
     "footer": {
         "name": "Lorik Myftari",
-        "title": "Elite goalkeeper",
+        "title": "Elit goalkeeper",
         "emailLabel": "Send email",
         "rightsReserved": "All rights reserved."
     },
