--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -64,7 +64,7 @@
     },
     "footer": {
         "name": "Lorik Myftari",
-        "title": "Elite målvakt",
+        "title": "Elit målvakt",
         "emailLabel": "Skicka e-post",
         "rightsReserved": "Alla rättigheter förbehållna."
     },
