--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -1,4 +1,9 @@
 {
+    "seo": {
+        "title": "Lorik Myftari – Målvaktsportfolio",
+        "description": "Lorik Myftari – 15-årig målvakt i IFK Göteborg U16. Upptäck hans karriärhöjdpunkter, statistik och kontaktuppgifter för scoutingmöjligheter.",
+        "keywords": "målvakt, fotboll, IFK Göteborg, U16, ungdom, portfolio, scouting"
+    },
     "home": "Hem",
     "aboutMenu": "Om mig",
     "meritsMenu": "Meriter",
